pxc/tests/test_25_slice/const7.px

namespace const7;
import test_common "";

function void test1()
{
  vector{int} a;
  a.resize(100, int());
  int i;
  for (i = 0; i < 100; ++i) { a[i] = i * 2; }
  cslice{int} asli = a[30..100]; // ok
  io::println(asli[0]);
  int mutable& e = asli[0]; // error
}

test1();
